# nostr-nip-17-libpurple

./: ._nostr-core  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
nostr-core/: Cargo.toml  build.rs  cbindgen.toml
nostr-core/include/: nostr_core.h
nostr-core/src/: error.rs  lib.rs  signaling.rs
nostr-purple/: Makefile
nostr-purple/src/: nostr.c
